k8s/services/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - port: 8080
  selector:
    app: auth
