k8s/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth
            backend:
              serviceName: auth-service
              servicePort: 8080
              # service:
              #   name: auth
              #   port:
              #     number: 80
